# yggdrasil-python-rapidjson

./: .buildinfo  .buildinfo.bak  CMakeLists.txt  README.rst  TODO.txt  api.html  as_pure_json.html  benchmarks-tables.html  benchmarks.html  changes.html  compare_schemas.html  decoder.html  dump.html  dumps.html  encode_schema.html  encoder.html  generate_data.html  genindex.html  geometry.cpp  geometry.html  index.html  load.html  loads.html  normalizer.html  objects.inv  pyproject.toml  quickstart.html  rapidjson.cpp  rawjson.html  requirements-test.txt  run_script.sh  search.html  searchindex.js  units.cpp  units.html  validator.html  yggdrasil.html  yggdrasil_rapidjson.cpp
.doctrees/: api.doctree  as_pure_json.doctree  benchmarks-tables.doctree  benchmarks.doctree  changes.doctree  compare_schemas.doctree  decoder.doctree  dump.doctree  dumps.doctree  encode_schema.doctree  encoder.doctree  environment.pickle  generate_data.doctree  geometry.doctree  index.doctree  load.doctree  loads.doctree  normalizer.doctree  quickstart.doctree  rawjson.doctree  units.doctree  validator.doctree  yggdrasil.doctree
_sources/: compare_schemas.rst.txt  encode_schema.rst.txt  units.rst.txt
_static/: documentation_options.js
cmake/: ygg_options.cmake
conda.recipe/: recipe.yaml
docs/: CMakeLists.txt  api.rst  as_pure_json.rst  conf.py  generate_data.rst  geometry.rst  index.rst  normalizer.rst  quickstart.rst  validator.rst  yggdrasil.rst
recipe/: meta.yaml
tests/: test_base_types.py  test_geometry.py  test_memory_leaks.py  test_numpy.py  test_units.py  test_validator.py
(+3 files in other folders)
